# ldk-server-agent

./: Cargo.toml  README.md  config.example.toml
src/: cli.rs  config.rs  conversation.rs  llm.rs  main.rs  markdown.rs  prompt.rs  safety.rs  tool_call.rs  ui.rs
src/mcp/: mod.rs  protocol.rs
